Corrected mint-nft page having nested IonContent, Prevent NavBar 'Mint Now' from wrapping when resizing

--- a/frontend/src/styles/navbar.module.css
+++ b/frontend/src/styles/navbar.module.css
@@ -11,6 +11,7 @@
   cursor: pointer;
   text-decoration: none !important;
   border: none;
+	white-space: nowrap;
   @apply mx-1 xl:mx-4;
 }
 
